# FSMN-VAD

./: .gitignore  CMakeLists.txt  README.md  common.cc  common.h  keyword_action.cc  keyword_action.h  kws_engine.cc  kws_engine.h  main.cc  mic_input.cc  mic_input.h  sound_tracking_action.cc  sound_tracking_action.h  vad_detector.cc  vad_detector.h
lib/: libabsl_base.2601.0.0.dylib  libabsl_borrowed_fixup_buffer.2601.0.0.dylib  libabsl_city.2601.0.0.dylib  libabsl_civil_time.2601.0.0.dylib  libabsl_cord.2601.0.0.dylib  libabsl_cord_internal.2601.0.0.dylib  libabsl_cordz_functions.2601.0.0.dylib  libabsl_cordz_handle.2601.0.0.dylib  libabsl_cordz_info.2601.0.0.dylib  libabsl_crc32c.2601.0.0.dylib  libabsl_crc_cord_state.2601.0.0.dylib  libabsl_crc_cpu_detect.2601.0.0.dylib  libabsl_crc_internal.2601.0.0.dylib  libabsl_debugging_internal.2601.0.0.dylib  libabsl_decode_rust_punycode.2601.0.0.dylib  libabsl_demangle_internal.2601.0.0.dylib  libabsl_demangle_rust.2601.0.0.dylib  libabsl_die_if_null.2601.0.0.dylib  libabsl_examine_stack.2601.0.0.dylib  libabsl_exponential_biased.2601.0.0.dylib  libabsl_flags_commandlineflag.2601.0.0.dylib  libabsl_flags_commandlineflag_internal.2601.0.0.dylib  libabsl_flags_config.2601.0.0.dylib  libabsl_flags_internal.2601.0.0.dylib  libabsl_flags_marshalling.2601.0.0.dylib  libabsl_flags_private_handle_accessor.2601.0.0.dylib  libabsl_flags_program_name.2601.0.0.dylib  libabsl_flags_reflection.2601.0.0.dylib  libabsl_graphcycles_internal.2601.0.0.dylib  libabsl_hash.2601.0.0.dylib  libabsl_hashtablez_sampler.2601.0.0.dylib  libabsl_int128.2601.0.0.dylib  libabsl_kernel_timeout_internal.2601.0.0.dylib  libabsl_leak_check.2601.0.0.dylib  libabsl_log_entry.2601.0.0.dylib  libabsl_log_globals.2601.0.0.dylib  libabsl_log_initialize.2601.0.0.dylib  libabsl_log_internal_check_op.2601.0.0.dylib  libabsl_log_internal_conditions.2601.0.0.dylib  libabsl_log_internal_fnmatch.2601.0.0.dylib  (+44 more)
onnx_model/: fsmn_kws.onnx
